icon size correction

--- a/cocktail/src/Component/footer/Footer.css
+++ b/cocktail/src/Component/footer/Footer.css
@@ -16,6 +16,8 @@ footer {
   color: white;
 }
 
-.body {
-  background-color: #DEB887;
+.social-icon {
+  width: 25px;
+  height: 25px;
+  margin: 5px;
 }/*# sourceMappingURL=Footer.css.map */
