--- a/cocktail/src/Component/footer/Footer.scss
+++ b/cocktail/src/Component/footer/Footer.scss
@@ -19,6 +19,8 @@ footer {
   }
 
 
-  .body{
-    background-color:#DEB887;
-}
+  .social-icon{
+    width: 25px;
+    height: 25px;  
+    margin: 5px;
+  }
