change to scss page

--- a/cocktail/src/Component/popular/PopularDrink.css
+++ b/cocktail/src/Component/popular/PopularDrink.css
@@ -1,6 +1,7 @@
 .popular-drinks-container {
   text-align: center;
   margin: 20px;
+  margin-left: 130px;
 }
 .popular-drinks-container .drinks-list {
   list-style-type: none;
