--- a/cocktail/src/Component/popular/PopularDrink.scss
+++ b/cocktail/src/Component/popular/PopularDrink.scss
@@ -4,11 +4,8 @@
 .popular-drinks-container {
   text-align: center;
   margin: 20px;
+  margin-left: 130px;
 
-  // .title {
-  //   font-size: 24px;
-  //   margin-bottom: 20px;
-  // }
 
   .drinks-list {
     list-style-type: none;
