--- a/cocktail/src/Component/filtreleme/scss/commonstyle.css
+++ b/cocktail/src/Component/filtreleme/scss/commonstyle.css
@@ -1,48 +1,48 @@
+@charset "UTF-8";
 .container2 {
-  max-width: 600px;
+  max-width: 800px;
   margin: 0 auto;
 }
 .container2 h2 {
-  text-align: center;
-  margin-bottom: 20px;
   font-size: 24px;
+  margin-bottom: 20px;
+  color: #333;
 }
 .container2 ul {
   list-style: none;
   padding: 0;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr); /* Her satırda 3 öğe olsun */
+  gap: 50px; /* Öğeler arasındaki boşluk */
 }
-.container2 li {
-  margin: 10px;
-  padding: 10px;
-  text-align: center;
+.container2 ul li {
+  margin-bottom: 30px;
 }
-.container2 li h3 {
-  margin-top: 13px;
-  font-size: 20px;
-}
-.container2 li img {
-  width: 50%;
-  max-height: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
-  cursor: pointer;
-  transition: transform 0.3s ease;
-}
-.container2 li img:hover {
-  transform: scale(1.05);
-}
-.container2 li p {
-  margin-top: 10px;
-}
-.container2 li ul {
-  list-style: none;
-  padding: 0;
-  margin-top: 10px;
-}
-.container2 li ul li {
-  margin-bottom: 5px;
-}
-.container2 a {
+.container2 ul li .cocktail-link {
   text-decoration: none;
   color: #333;
+  display: block;
+}
+.container2 ul li .cocktail-link img {
+  max-width: 100%;
+  border-radius: 8px;
+  margin-bottom: 10px;
+}
+.container2 ul li .cocktail-link h3 {
+  font-size: 18px;
+  margin-bottom: 5px;
+}
+.container2 ul li .cocktail-link p {
+  font-size: 14px;
+  margin-bottom: 10px;
+  color: #555;
+}
+.container2 ul li .cocktail-link ul {
+  list-style: none;
+  padding: 0;
+}
+.container2 ul li .cocktail-link ul li {
+  font-size: 14px;
+  margin-bottom: 5px;
+  color: #777;
 }/*# sourceMappingURL=commonstyle.css.map */
