--- a/cocktail/src/Component/filtreleme/scss/commonstyle.scss
+++ b/cocktail/src/Component/filtreleme/scss/commonstyle.scss
@@ -108,8 +108,9 @@
           }
   
           h3 {
-            font-size: 18px;
+           font-size: 20px;
             margin-bottom: 5px;
+            text-align: center;
           }
   
           p {
